      passwords = no' by always initializing the session key.

      
o   Gerald (Jerry) Carter <jerry@samba.org>
    * Fix bug that caused rpcclient to incorrectly retrieve 
      the SID for a server (this casuing all calls that required 
      this information to fail). 
    * BUG 977: Don't create a homes share for a user if a static 
      share already exists by the same name.

o   LaMont Jones <lamont@debian.org>
    * BUG 225328 (Debian): Correct false failure LFS test that resulted 
      in  _GNU_SOURCE not being defined (thus resulting in strndup() 
      not being defined).
      

o   Volker Lendecke <vl@samba.org>
    * Display more descriptive error messages for login via 'net'.
    * Fix compiler warning in the net tool.
    * Fix length bug when decoding base64 strings.
    * Ensure we don't call getpwnam() inside a loop that is iterating 
      over users with getpwent().  This broke on glibc 2.3.2.


o   Stefan Metzmacher <metze@samba.org>
    * Add SIGABRT to fault handling in order to catch got a 
      backtrace if an error occurs the OpenLDAP client libs.


o   MORIYAMA Masayuki <moriyama@miraclelinux.com>
    * BUG 570: Ensure that configure honors the LDFLAGS variable.


Changes since 3.0.2pre1
-----------------------

o   Jeremy Allison <jra@samba.org>
    * Revert change that broke Exchange clear text samlogons.
    * Fix gcc 3.4 warning in MS-DFS code.
    
       
o   Andrew Bartlet <abartlet@samba.org>
    * Fix segfault when 'security = ads' but no realm is defined.
    * BUG 722: Allow winbindd to map machine accounts to uids.
    * More cleanups for winbindd's find_our_domain().
    * More clearly detect whether a domain controller is an NT4
      or mixed-mode AD DC (additional bug fixes by jerry & jmcd).
    * Increase separation between DNS queries for hosts and queries
      for AD domain controllers.

    
o   Justin Baugh <justin.baugh@request.com>
    * BUG 948: Implement missing functions required for FreeBSD 